--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.462.0",
+    "mongoose": "^8.8.3",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
     "prismjs": "^1.29.0",
